add chap 4 64 bit

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@
 /x86_IRVINE/Chap04/Chap04.vcxproj.user
 /x86_IRVINE/Chap04/Chap04.vcxproj.filters
 /x86_IRVINE/Chap04/Chap04.vcxproj
+/x86_IRVINE/Chap04/x64/Debug
+/x86_IRVINE/Chap4_64bit/x64/Debug
+/x86_IRVINE/Debug
+/x86_IRVINE/Chap4_64bit/Chap4_64bit.vcxproj.user
+/x86_IRVINE/Chap4_64bit/Chap4_64bit.vcxproj.filters
+/x86_IRVINE/Chap4_64bit/Chap4_64bit.vcxproj
+/x86_IRVINE/x64/Debug
