add chap 4 problem

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /x86_IRVINE/Chap4_64bit/Chap4_64bit.vcxproj.filters
 /x86_IRVINE/Chap4_64bit/Chap4_64bit.vcxproj
 /x86_IRVINE/x64/Debug
+/x86_IRVINE/Chap4_64bit/Debug/Chap4_64bit.tlog
+/x86_IRVINE/Chap4_64bit/Debug
